# map-holons

./: .gitignore  .harper-dictionary.txt  .npmrc  38tree.1.txt  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEV_MODE.md  IDE_SETUP.md  LICENSE  README.md  README_CONDUCTORA.md  flake.lock.old  flake.nix  happ.code-workspace  host.code-workspace  install.out  issue-436-receptor-restructure.md  package-lock.json  package.json  pr418-summary.md  root.code-workspace  sync_deps.py  tree.txt  unversioned.txt
crates/coordinator/core_schema/: Cargo.toml
crates/coordinator/dances/: Cargo.toml
crates/coordinator/descriptors/: Cargo.toml
crates/holon_dance_builders/: Cargo.toml
crates/holon_dance_builders/src/: abandon_staged_changes_dance.rs  add_related_holons_dance.rs  commit_dance.rs  delete_holon_dance.rs  generate_temporary_ids.rs  get_all_holons_dance.rs  get_holon_by_id_dance.rs  lib.rs  load_holons_dance.rs  new_holon_dance.rs  query_relationships_dance.rs  remove_properties_dance.rs  remove_related_holons_dance.rs  stage_new_from_clone_dance.rs  stage_new_holon_dance.rs  stage_new_version_dance.rs  with_properties_dance.rs
crates/holons_client/: Cargo.toml
crates/holons_client/src/: client_context.rs  lib.rs  zome_client.rs
crates/holons_client/tests/: dance_tests.rs  sweet_zome_client.rs  sweetzome_client.rs  wip_real_client.rs  wip_sweet_zome_client.rs  zome_client.rs
crates/holons_core/: Cargo.toml
crates/holons_core/src/: lib.rs  mock_conductor.rs  prelude.rs
crates/holons_guest/: Cargo.toml
crates/holons_guest/src/: guest_context.rs  lib.rs
crates/holons_guest/tests/: dance_tests.rs
crates/holons_guest_integrity/: Cargo.toml
crates/holons_guest_integrity/src/: holon_node.rs  lib.rs  type_conversions.rs
crates/holons_init/: Cargo.toml
crates/holons_init/src/: client_context_factory.rs  context_initialization.rs  guest_context_factory.rs  holons_context_factory.rs  lib.rs
crates/holons_loader/: Cargo.toml
crates/holons_loader/src/: controller.rs  errors.rs  loader_holon_mapper.rs  loader_ref_resolver.rs  ref_resolver_first_draft.rs
crates/holons_prelude/: Cargo.toml
crates/holons_receptor/: Cargo.toml
crates/holons_receptor/src/: cache.rs  config.rs  factory.rs  lib.rs
crates/shared_validation/: Cargo.toml
crates/shared_validation/src/: holon_validation.rs  lib.rs  properties.rs  relationships.rs  validation_error.rs  validation_helpers.rs
crates/type_definers/: Cargo.toml
crates/type_definers/src/: boolean_definer.rs  boolean_descriptor.rs  collection_definer.rs  collection_descriptor.rs  descriptor_types_deprecated.rs  enum_definer.rs  enum_descriptor.rs  enum_variant_definer.rs  enum_variant_descriptor.rs  holon_definer.rs  holon_descriptor.rs  integer_definer.rs  integer_descriptor.rs  lib.rs  meta_type_definer.rs  property_definer.rs  property_descriptor.rs  relationship_definer.rs  relationship_descriptor.rs  schema.rs  semantic_version.rs  string_definer.rs  string_descriptor.rs  type_descriptor.rs  type_header.rs  value_type_definer.rs
happ/: .gitignore  .rustfmt.toml  Cargo.toml  package.json
happ/.cargo/: config.toml
happ/crates/holons_guest/: Cargo.toml
happ/crates/holons_guest_integrity/: Cargo.toml
happ/crates/holons_loader/: Cargo.toml
happ/tryorama/: vitest.config.ts
happ/workdir/: dna.yaml  happ.yaml  web-happ.yaml
happ/zomes/workdir/: dna.yaml
host/: Cargo.toml  package.json
host/conductora/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
host/conductora/capabilities/: main.json
host/conductora/icons/: icon.icns
host/conductora/resources/: bootstrap-import.schema.json
host/conductora/src/: env.rs  lib.rs  logging.rs  main.rs
host/crates/deprecated_holochain_receptor/: Cargo.toml
host/crates/holochain_receptor/: Cargo.toml
host/crates/holons_client/: Cargo.toml
host/crates/holons_loader_client/: Cargo.toml
host/crates/holons_receptor/: Cargo.toml
host/crates/holons_recovery/: Cargo.toml
host/crates/local_receptors/: Cargo.toml
host/crates/map_commands/: Cargo.toml
host/crates/map_commands_contract/: Cargo.toml
host/crates/map_commands_runtime/: Cargo.toml
host/crates/map_commands_wire/: Cargo.toml
host/crates/recovery_receptor/: Cargo.toml
host/crates/session_receptor/: Cargo.toml
host/crates/shared_types/: Cargo.toml
host/import_files/: holon-import-rules.json
host/import_files/map-schema/: bootstrap-import.schema.json
host/map-sdk/: package-lock.json  package.json  tsconfig.json
host/map-sdk/tests/: errors.test.ts  references-source-alignment.test.ts  request-context.test.ts  result-decoders.test.ts  transport.test.ts  wire-types.test.ts
host/patches/: README.md
host/patches/holochain_wasmer_host/: .cargo_vcs_info.json  Cargo.toml
host/scripts/: tauri-dev.sh
host/ui/: .gitignore  angular.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.ts
host/ui/public/: local_references.json  malformed1.json  simple_typedescriptors.json
host/ui/src/: index.html  main.ts
shared_crates/holon_dance_builders/: Cargo.toml
shared_crates/holon_dance_builders/src/: abandon_staged_changes_dance.rs  add_related_holons_dance.rs  commit_dance.rs  delete_holon_dance.rs  fetch_all_related_holons_dance.rs  get_all_holons_dance.rs  get_holon_by_id_dance.rs  lib.rs  load_holons_dance.rs  new_holon_dance.rs  query_relationships_dance.rs  remove_properties_dance.rs  remove_related_holons_dance.rs  stage_new_from_clone_dance.rs  stage_new_holon_dance.rs  stage_new_version_dance.rs  with_properties_dance.rs
shared_crates/holons_core/: Cargo.toml
shared_crates/holons_core/src/: lib.rs
shared_crates/holons_loader/: Cargo.toml
shared_crates/holons_loader/src/: controller.rs  (+4 more)
shared_crates/holons_prelude/: Cargo.toml
shared_crates/holons_trust_channel/: Cargo.toml
shared_crates/json_schema_validate_cli/: Cargo.toml
sweetests/: Cargo.toml
tests/sweetests/: .env  Cargo.toml
tools/map-schema/: Cargo.toml
workspaces/native/: Cargo.toml
workspaces/test/: Cargo.toml
workspaces/wasm/: Cargo-workspace.toml  Cargo.toml
(+1662 files in other folders)
