[workspace]

members = [
    # happ crates
    "happ/zomes/coordinator/holons",
    "happ/zomes/integrity/holons_integrity",
    "happ/crates/holons_guest",
    "happ/crates/holons_guest_integrity",
    "happ/crates/holons_loader",
    #runtime crates
    "runtime/crates/holons_client",
    "runtime/crates/holons_tauri_adapter",
    # shared crates
    "shared_crates/shared_validation",
    "shared_crates/type_system/base_types",
    "shared_crates/type_system/core_types",
    "shared_crates/type_system/integrity_core_types",
    "shared_crates/type_system/type_names",
    "shared_crates/json_schema_validation",
    "shared_crates/holons_core",
    "shared_crates/holon_dance_builders",
    "shared_crates/holons_holochain_adapter",
    "shared_crates/holons_prelude",
    "shared_crates/holons_trust_channel",
    "tests/sweetests",
]

resolver = "2"

[workspace.dependencies]
# Path dependencies
holons = { path = "happ/zomes/coordinator/holons" }
holons_integrity = { path = "happ/zomes/integrity/holons_integrity" }
shared_validation = { path = "shared_crates/shared_validation" }
base_types = { path = "shared_crates/type_system/base_types" }
core_types = { path = "shared_crates/type_system/core_types" }
integrity_core_types = { path = "shared_crates/type_system/integrity_core_types" }
type_names = { path = "shared_crates/type_system/type_names" }
json_schema_validation = { path = "shared_crates/json_schema_validation" }
holons_client = { path = "runtime/crates/holons_client" }
holons_core = { path = "shared_crates/holons_core" }
holon_dance_builders = { path = "shared_crates/holon_dance_builders" }
holons_guest = { path = "happ/crates/holons_guest" }
holons_guest_integrity = { path = "happ/crates/holons_guest_integrity" }
holons_holochain_adapter = { path = "shared_crates/holons_holochain_adapter" }
holons_loader = { path = "happ/crates/holons_loader" }
holons_prelude = { path = "shared_crates/holons_prelude" }
holons_tauri_adapter = { path = "runtime/crates/holons_tauri_adapter" }
holons_trust_channel = { path = "shared_crates/holons_trust_channel" }

# External dependencies
async-trait = "0.1.51"
convert_case = "0.5"
derive-new = "0.7"
futures = { version = "0.3.1", default-features = false }
hex = "0.4"
hdi = "0.6"
hdk = "0.5"
holochain_integrity_types = "0.5"
holochain_serialized_bytes = "*"
Inflector = "0.11"
pretty_assertions = "1.4.0"
quick_cache = { version = "0.6.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.109"
sha2 = "0.10.8"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tracing = "0.1"
rstest = "0.25"
uuid = { version = "1", features = ["serde"] }



[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
