[workspace]
resolver = "2"

members = [
    # Host
#    "host/conductora",
#    "host/crates/holons_client",
#    "host/crates/holochain_receptor",
#    "host/crates/holons_receptor",
#    "host/crates/holons_loader_client",

    # Happ
    "happ/zomes/coordinator/holons",
    "happ/zomes/integrity/holons_integrity",
    "happ/crates/holons_guest",
    "happ/crates/holons_guest_integrity",

    # Shared
    "shared_crates/holon_dance_builders",
    "shared_crates/holons_core",
    "shared_crates/holons_prelude",
    "shared_crates/shared_validation",
    "shared_crates/json_schema_validation",
    "shared_crates/type_system/base_types",
    "shared_crates/type_system/core_types",
    "shared_crates/type_system/integrity_core_types",
    "shared_crates/type_system/type_names",
    "happ/crates/holons_loader",
    "shared_crates/holons_trust_channel",

    # Tests
    "tests/sweetests"
]

# -------------------------------------------------------------------
# Unified dependency versions (optional but helpful for consistency)
# -------------------------------------------------------------------
[workspace.dependencies]
# Happ
holons = { path = "happ/zomes/coordinator/holons" }
holons_integrity = { path = "happ/zomes/integrity/holons_integrity" }
holons_guest = { path = "happ/crates/holons_guest" }
holons_guest_integrity = { path = "happ/crates/holons_guest_integrity" }

# Host
#conductora = { path = "host/conductora" }
#holons_client = { path = "host/crates/holons_client" }
#holochain_receptor = { path = "host/crates/holochain_receptor" }
#holons_receptor = { path = "host/crates/holons_receptor" }
#holons_loader_client = { path = "host/crates/holons_loader_client" }


# Shared
holon_dance_builders = { path = "shared_crates/holon_dance_builders" }
holons_core = { path = "shared_crates/holons_core" }
holons_prelude = { path = "shared_crates/holons_prelude" }
shared_validation = { path = "shared_crates/shared_validation" }
json_schema_validation = { path = "shared_crates/json_schema_validation" }
base_types = { path = "shared_crates/type_system/base_types" }
core_types = { path = "shared_crates/type_system/core_types" }
integrity_core_types = { path = "shared_crates/type_system/integrity_core_types" }
type_names = { path = "shared_crates/type_system/type_names" }
holons_loader = { path = "happ/crates/holons_loader" }
holons_trust_channel = { path = "shared_crates/holons_trust_channel" }

# Holochain
hdi = "0.6"
hdk = "0.5"
holochain_serialized_bytes = "*"

# External libs
async-trait = "0.1"
convert_case = "0.6"
derive-new = "0.7"
futures = { version = "0.3", default-features = false }
hex = "0.4"
Inflector = "*"
pretty_assertions = "1"
quick_cache = { version = "0.6.14", default-features = false }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }

# -------------------------------------------------------------------
# Profiles
# -------------------------------------------------------------------
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"