[package]
name = "holons_test"
version = "0.1.0"
edition = "2021"
publish = false

# (You can omit [lib] entirely unless you need a custom crate-type or name)

[dependencies]
# Workspace crates (prefer workspace deps over path for consistency)

# General deps
#base64ct = "=1.7.3"
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
#serde_json = "1.0.109"
tracing = "0.1"
async-trait = "0.1.51"

# MAP dependencies
holons_client = { path = "../host/crates/holons_client" }
holons_prelude = { path = "../shared_crates/holons_prelude" }
holons_core = { path = "../shared_crates/holons_core" }
holons_trust_channel = { path = "../shared_crates/holons_trust_channel" }
type_names = { path = "../shared_crates/type_system/type_names" }
core_types = { path = "../shared_crates/type_system/core_types" }
base_types = { path = "../shared_crates/type_system/base_types" }
holons_loader = {path = "../shared_crates/holons_loader"}

[dev-dependencies]
rstest = "0.25"
pretty_assertions = "1.4"
#futures = { version = "0.3.1", default-features = false }
tokio = { version = "1.35", features = ["full"] }
async-std = "1"
tracing-subscriber = "0.3"

# Holochain sweettest stack (pin as you already do)
holochain = { version = "0.5", default-features = false, features = [
    "sweettest",
    "wasmer_sys",
    "datachannel-vendored"
] }