[package]
name = "holon_dance_builders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]
name = "holon_dance_builders"

[dependencies]
# General dev-dependencies (platform-agnostic)
derive-new = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


# MAP Dependencies
shared_types_holon = { workspace = true }
holons_core = { workspace = true }

