[package]
name = "holon_dance_builders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]
name = "holon_dance_builders"

[dependencies]
# General dev-dependencies (platform-agnostic)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.109"


# MAP Dependencies

[dependencies.holons_core]
path = "../holons_core"

[dependencies.core_types]
path = "../type_system/core_types"

[dependencies.base_types]
path = "../type_system/base_types"

[dependencies.integrity_core_types]
path = "../type_system/integrity_core_types"
