[package]
name = "holons_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_client"

[dependencies]
# General dev-dependencies (platform-agnostic)
tracing = { workspace = true }
async-trait = { workspace = true }

# MAP Dependencies
holons_core = { workspace = true }
#holon_dance_builders = { workspace = true }
base_types = { workspace = true }
core_types = { workspace = true }
integrity_core_types = { workspace = true }

