[package]
name = "holons_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]
name = "holons_core"

[dependencies]
# getrandom wasm problem workarounds
ahash = "=0.8.11"
# only used by holons_core
quick_cache = "0.6"

# General dev-dependencies (platform-agnostic)
derive-new = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Holochain Dependencies
hdi = { workspace = true }
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }

# MAP Dependencies
shared_validation = { workspace = true }
base_types = { workspace = true }
core_types = { workspace = true }
integrity_core_types = { workspace = true }


[dev-dependencies]
# General dev-dependencies (platform-agnostic)
futures = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }