[package]
name = "holons_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_core"

[dependencies]
# getrandom wasm problem workarounds
ahash = "=0.8.11"
# only used by holons_core
quick_cache = "0.6"

holochain = { version = "0.5", default-features = false, features = [
    "sweettest",
    "wasmer_sys",
    "datachannel-vendored"
] }

# General dev-dependencies (platform-agnostic)
derive-new = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

# MAP Dependencies
base_types = { workspace = true }
core_types = { workspace = true }
type_names = { workspace = true }


[dev-dependencies]
# General dev-dependencies (platform-agnostic)
futures = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

