[package]
name = "holons_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_core"

[dependencies]
# getrandom wasm problem workarounds
ahash = "=0.8.11"
# only used by holons_core
quick_cache = { version = "0.6.14", default-features = false }


# General dev-dependencies (platform-agnostic)
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.109"
sha2 = "0.10.8"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
async-trait = "0.1.51"

# MAP Dependencies

[dependencies.core_types]
path = "../type_system/core_types"

[dependencies.base_types]
path = "../type_system/base_types"

[dependencies.type_names]
path = "../type_system/type_names"

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.25"
futures = { version = "0.3.1", default-features = false }
