[package]
name = "holons_guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_guest"

[features]
guest = []  # This crate supports the `guest` feature

[dependencies]
# General dev-dependencies (platform-agnostic)
derive-new = { workspace = true }
Inflector = { workspace = true }
quick_cache = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Holochain Dependencies
hdk = { workspace = true }
hdi = { workspace = true }
holons_integrity = { workspace = true }

# MAP Dependencies
shared_types_holon = { workspace = true }
holons_core = { workspace = true }
holon_dance_builders = { workspace = true }
