[package]
name = "holons_guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_guest"

[features]
guest = []  # This crate supports the `guest` feature

[dependencies]
# General dev-dependencies (platform-agnostic)
Inflector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Holochain Dependencies
hdk = { workspace = true }
hdi = { workspace = true }
holons_integrity = { workspace = true }

# MAP Dependencies
holons_core = { workspace = true }
holon_dance_builders = { workspace = true }
base_types = { workspace = true }
core_types = { workspace = true }
integrity_core_types = { workspace = true }
