[package]
name = "holons_guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_guest"

[features]
guest = []  # This crate supports the `guest` feature

[dependencies]
# General dev-dependencies (platform-agnostic)
Inflector = "0.11"
serde = { version = "1", features = ["derive"] }
#serde_json = "1.0.109"
thiserror = "2"
tracing = "0.1"

# Holochain Dependencies
hdk = "0.5"
hdi = "0.6"

# MAP Dependencies

[dependencies.holon_dance_builders]
path = "../holon_dance_builders"

[dependencies.holons_core]
path = "../holons_core"

[dependencies.integrity_core_types]
path = "../type_system/integrity_core_types"

[dependencies.core_types]
path = "../type_system/core_types"

[dependencies.base_types]
path = "../type_system/base_types"

[dependencies.type_names]
path = "../type_system/type_names"

[dependencies.holons_integrity]
path = "../../zomes/integrity/holons_integrity"

[dependencies.holons_guest_integrity]
path = "../holons_guest_integrity"

[dependencies.holons_loader]
path = "../holons_loader"