[package]
name = "holons_guest_integrity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_guest_integrity"

[features]
guest = []  # This crate supports the `guest` feature

[dependencies]
# General dev-dependencies (platform-agnostic)
derive-new = { workspace = true }
serde = { workspace = true }

# Holochain Dependencies
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }


# MAP Dependencies
integrity_core_types = { workspace = true }