[package]
name = "holons_receptor"
version = "0.1.0"
edition = "2021"
#edition = "2024"

[dependencies]
serde_bytes = "*"
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4" 


#map dependencies
holons_client = { path = "../holons_client" }
holons_core = { path = "../holons_core" }
holon_dance_builders = { path = "../holon_dance_builders"}
holochain_receptor = { path = "../holochain_receptor" }
holons_trust_channel = { path = "../holons_trust_channel" }
base_types = { path = "../type_system/base_types" }
core_types = { path = "../type_system/core_types" }
integrity_core_types = { path = "../type_system/integrity_core_types" }
