[package]
name = "shared_validation"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1", features = ["derive"] }
thiserror = "2"


[dependencies.integrity_core_types]
path = "../type_system/integrity_core_types"

[dependencies.core_types]
path = "../type_system/core_types"

[dependencies.holons_core]
path = "../holons_core"
