[package]
name = "type_definers"
version = "0.1.0"
edition = "2021"

[lib]
# WASM and non-WASM compatible
crate-type = ["rlib"]
name = "type_definers"

[dependencies]
# General Dependencies
derive-new = { workspace = true }
Inflector = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

# Holochain Dependencies
# hdk = { workspace = true }
hdi = { workspace = true }

# MAP Dependencies
holons_core = { workspace = true }
base_types = { workspace = true }
core_types = { workspace = true }
integrity_core_types = { workspace = true }

[dev-dependencies]