[package]
name = "Conductora"
version = "0.0.0"
description = "Conductora Tauri runtime"
authors = ["Thomascal"]
repository = ""
edition = "2021"
#rust-version = "1.83"

[lib]
name = "conductora_lib"
crate-type = ["staticlib", "rlib", "cdylib"]

[build-dependencies]
#dotenvy = "0.15"
tauri-build = { version = "2", default-features = false, features = [
] }

[dependencies]
serde = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
serde_json = "1.0"
async-trait = "0.1"
#hex = "0.4"
#sha2 = "0.10"
#log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi", "registry"] }
#tracing-log = "0.2"  # Bridge for log:: calls

#map dependencies
holons_client = { path = "../crates/holons_client" }
holons_receptor = { path = "../crates/holons_receptor" }
holochain_receptor = { path = "../crates/holochain_receptor" }
core_types = { path = "../../shared_crates/type_system/core_types" }

#holochain dependencies
holochain_client = { version = "0.7.0"}
tauri-plugin-holochain = { path = "plugins/tauri-plugin-holochain" }

[dev-dependencies] # for unit tests
#tauri = { version = "2", features = ["test"] } #"devtools"
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


