[package]
name = "Conductora"
version = "0.0.0"
description = "Conductora Tauri runtime"
authors = ["Thomascal"]
repository = ""
edition = "2021"
#rust-version = "1.83"

[lib]
name = "conductora_lib"
crate-type = ["staticlib", "rlib", "cdylib"]

[build-dependencies]
#dotenvy = "0.15"
tauri-build = { version = "2", default-features = false, features = [
] }

[dependencies]
serde = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
#hex = "0.4"
#sha2 = "0.10"
#log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi", "registry"] }
#tracing-log = "0.2"  # Bridge for log:: calls

#map dependencies
holons_client = { path = "../crates/holons_client" }
client_shared_types = { path = "../crates/shared_types" }
deprecated_holochain_receptor = { path = "../crates/deprecated_holochain_receptor" }
recovery_receptor = { path = "../crates/recovery_receptor" }
holons_core = { workspace = true }
holons_trust_channel = { path = "../../shared_crates/holons_trust_channel" }
map_commands_contract = { workspace = true }
map_commands_wire = { workspace = true }
map_commands_runtime = { workspace = true }
core_types = { path = "../../shared_crates/type_system/core_types" }

#holochain dependencies
holochain_client = { version = "0.7.1"}
tauri-plugin-holochain = { path = "plugins/tauri-plugin-holochain" }
tokio = { version = "1.5", features = ["rt", "rt-multi-thread"] }

[dev-dependencies] # for unit tests
#tauri = { version = "2", features = ["test"] } #"devtools"
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


