[package]
name = "holon_dance_builders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holon_dance_builders"

[dependencies]
# General dev-dependencies (platform-agnostic)

# MAP Dependencies

holons_core = {path = "../holons_core"}
core_types = {path = "../type_system/core_types"}
base_types = {path = "../type_system/base_types"}
type_names = {path = "../type_system/type_names"}
integrity_core_types = {path = "../type_system/integrity_core_types"}
