[package]
name = "holon_dance_builders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holon_dance_builders"

[dependencies]
# General dev-dependencies (platform-agnostic)

# MAP Dependencies

holons_core = {workspace = true}
core_types = {workspace = true}
base_types = {workspace = true}
type_names = {workspace = true}
integrity_core_types = {workspace = true}
