[package]
name = "holons_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_core"

[dependencies]
# only used by holons_core
quick_cache = { version = "0.6.14", default-features = false }


# General dev-dependencies (platform-agnostic)
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }
async-trait = "0.1.51"

# MAP Dependencies

core_types = {path = "../type_system/core_types"}
base_types = {path = "../type_system/base_types"}
type_names = {path = "../type_system/type_names"}
