[package]
name = "holons_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "holons_core"

[dependencies]
# only used by holons_core
quick_cache = {workspace = true}


# General dev-dependencies (platform-agnostic)
derive-new = {workspace = true}
serde = {workspace = true}
sha2 = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true}
async-trait = {workspace = true}

# MAP Dependencies

core_types = {workspace = true}
base_types = {workspace = true}
type_names = {workspace = true}
