[package]
name = "holons_loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "holons_loader"
crate-type = ["rlib"]

[dependencies]
holons_prelude = {path = "../holons_prelude"}
core_types = {path = "../type_system/core_types"}
tracing = "0.1"
# uuid = { workspace = true, features = ["v4", "serde"] }


[dev-dependencies]
rstest = "0.26" #{ workspace = true }
