[package]
name = "holons_prelude"
version = "0.1.0"
edition = "2024"

[dependencies]

holons_core = {path = "../holons_core"}
type_names = {path = "../type_system/type_names"}
integrity_core_types = {path = "../type_system/integrity_core_types"}
core_types = {path = "../type_system/core_types"}
base_types = {path = "../type_system/base_types"}
holon_dance_builders = {path = "../holon_dance_builders"}
