[package]
name = "holons_test"
version = "0.1.0"
edition = "2021"
publish = false

# (You can omit [lib] entirely unless you need a custom crate-type or name)

[dependencies]
# Workspace crates (prefer workspace deps over path for consistency)

# General deps
#base64ct = "=1.7.3"
derive-new = "0.7"
serde = { version = "1", features = ["derive"] }
#serde_json = "1.0.109"
tracing = "0.1"
async-trait = "0.1.51"
panic = "0.4.0"

[dependencies.holons_prelude]
path = "../../crates/holons_prelude"

#[dependencies.holons_guest_integrity]
#path = "../../crates/holons_guest_integrity"
#
#[dependencies.holon_dance_builders]
#path = "../../crates/holon_dance_builders"

[dependencies.holons_core]
path = "../../crates/holons_core"

[dependencies.holons_client]
path = "../../crates/holons_client"

[dependencies.holons_loader]
path = "../../crates/holons_loader"

[dependencies.holons_loader_client]
path = "../../crates/holons_loader_client"

[dependencies.holons_trust_channel]
path = "../../crates/holons_trust_channel"

[dependencies.type_names]
path = "../../crates/type_system/type_names"

[dependencies.core_types]
path = "../../crates/type_system/core_types"

[dependencies.base_types]
path = "../../crates/type_system/base_types"

[dev-dependencies.holons_trust_channel]
path = "../../crates/holons_trust_channel"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4"
#futures = { version = "0.3.1", default-features = false }
tokio = { version = "1", features = ["full"] }
async-std = "1"
tracing-subscriber = "0.3"

# Holochain sweettest stack (pin as you already do)
holochain = { version = "0.5", default-features = false, features = [
    "sweettest",
    "wasmer_sys",
    "datachannel-vendored"
] }